# cad-vision

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
scripts/: download_data.py  render_dataset.py  train.py
src/: requirement.txt
src/dataset/: featurenet_dataset.py
src/models/: mvcnn.py  resnet_branch.py
src/utils/: gradcam.py  infer.py
