[project]
name = "cad-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "open3d>=0.19.0",
    "pillow>=12.1.1",
    "requests>=2.33.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "trimesh>=4.11.5",
]
